--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^4.1.17"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.17"
+    "@tailwindcss/cli": "^4.1.17",
+    "swiper": "^12.0.3"
   }
 }
